# process-watcher-rs

./: Cargo.toml
configs/: example.json
src/: config.rs  config_tests.rs  consts.rs  cpu_measure.rs  main.rs  memory_measure.rs  process_info.rs  process_info_tests.rs
src/configuration/: config.rs  config_cpu.rs  config_memory.rs  config_tests.rs  mod.rs
src/measures/: cpu_measure.rs  memory_measure.rs  mod.rs
