[package]
name = "process-watcher-rs"
version = "0.0.1"
edition = "2021"
authors = ["Jose M. Abuin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
procfs = "0.16.0"
clap = { version = "4.5.4", features = ["derive"] }